Actualizar index.html
Añadido font-family Montserrat en Style de tabla principal

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             const signatureHTML = `
                 <span style="font-family: 'Montserrat', sans-serif;">${saludo}</span>
                 <div style="font-family: 'Montserrat', sans-serif; color: #333; width: 595px;">
-                <table style="width: 570px;" border="0" cellspacing="0" cellpadding="0">
+                <table style="font-family: 'Montserrat', sans-serif; width: 570px;" border="0" cellspacing="0" cellpadding="0">
                 <br>
                 <tbody>
                     <tr><td><a href="https://www.dulmatesa.es" target="_blank">
