--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
             <option value="Ana Gutiérrez">Ana Gutiérrez</option>
             <option value="Alfredo González">Alfredo González</option>
             <option value="Esteban Tirado">Esteban Tirado</option>
+            <option value="Esteban Tirado">Javier Jaime</option>
             <option value="Pablo Alonso">Pablo Alonso</option>
             <option value="Raúl Castejón">Raúl Castejón</option>
           </select>
@@ -315,6 +316,12 @@
                     oficina = 'Sede Navarrés';
                     correo = 'esteban.tirado@dulmatesa.es';
                     telefono = '658877528';
+                    break;
+                case 'Javier Jaime':               
+                    positionValue = 'Controller';
+                    oficina = 'Oficinas Centrales / HQ';
+                    correo = 'javier.jaime@dulmatesa.es';
+                    telefono = '608656626';
                     break;
                 case 'Pablo Alonso':
                     positionValue = 'Director RR.HH.';
