--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <option value="Ana Gutiérrez">Ana Gutiérrez</option>
             <option value="Alfredo González">Alfredo González</option>
             <option value="Esteban Tirado">Esteban Tirado</option>
-            <option value="Esteban Tirado">Javier Jaime</option>
+            <option value="Javier Jaime">Javier Jaime</option>
             <option value="Pablo Alonso">Pablo Alonso</option>
             <option value="Raúl Castejón">Raúl Castejón</option>
           </select>
