--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="container">
       <div class="form-section">
         <h1>Generador de firmas<br>
-          Correo Dulmatesa v.2.0</h1>
+          Correo Dulmatesa v.2.1</h1>
         Bienvenid@ al generador de firmas para correo de Dulmatesa. Para generar
         tu firma, selecciona tu nombre y pulsa el botón verde "Copiar firma al
         portapapeles".<br>
@@ -348,7 +348,7 @@
                         <img src="https://i.postimg.cc/Kj9CyxVY/mail-dulma.png" alt="Correo" style="display: block;">
                     </td>
                     <td width="545px" height="25px" style="font-family: Montserrat, sans-serif; font-size: 9pt; color: #919191; vertical-align: middle;">
-                        <a href="mailto:${correo}" style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;">${correo}</a>
+                        <a href="mailto:${correo}" style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; font-weight: normal; text-decoration: none;">${correo}</a>
                     </td></tr></table>
 
 
@@ -455,6 +455,5 @@
         // Actualizar vista previa al cargar la página
         updateSignature();
     </script>
-    
   </body>
 </html>
