--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                         <img src="https://i.postimg.cc/Kj9CyxVY/mail-dulma.png" alt="Correo" style="display: block;">
                     </td>
                     <td width="545px" height="25px" style="font-family: Montserrat, sans-serif; font-size: 9pt; color: #919191; vertical-align: middle;">
-                        <a href="mailto:${correo}" style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; font-weight: normal; text-decoration: none;">${correo}</a>
+                    <a href="mailto:${correo}" style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;"><font color="#919191">${correo}<font></a>
                     </td></tr></table>
 
 
@@ -450,5 +450,6 @@
         // Actualizar vista previa al cargar la página
         updateSignature();
     </script>
+    
   </body>
 </html>
