--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
+        a {
+            font-family: 'Montserrat', sans-serif;
+            font-size: 9pt;
+            color: #919191;
+            vertical-align: middle;
+            text-decoration: none;
+        }
         body {
             font-family: 'Montserrat', sans-serif;
             background-color: #f4f4f4;
@@ -143,7 +150,7 @@
     <div class="container">
       <div class="form-section">
         <h1>Generador de firmas<br>
-          Correo Dulmatesa v.2.6</h1>
+          Correo Dulmatesa v.2.8</h1>
         Bienvenid@ al generador de firmas para correo de Dulmatesa. Para generar
         tu firma, selecciona tu nombre y pulsa el botón verde "Copiar firma al
         portapapeles".<br>
