--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
                     <tr><td cellspacing="0" cellpadding="0" border="0" width="570px" height="10px" style="height: 10px; vertical-align: middle;"></td></tr>
                     </table>
 
+                    
                     <table cellspacing="0" cellpadding="0" border="0">
                     <tr><td cellspacing="0" cellpadding="0" border="0" width=0px style="padding-right: 10px; vertical-align: middle;">
                         <img src="https://i.postimg.cc/4NSjL4VL/telf-dulma.png" alt="Teléfono" style="display: block;">
@@ -348,6 +349,7 @@
                     </td></tr></table>
                     
 
+                    <div style="margin-top: 15px;">
                     <table cellspacing="0" cellpadding="0" border="0">
                     <tr><td cellspacing="0" cellpadding="0" border="0" width=0px style="padding-right: 9px; vertical-align: middle;">
                         <img src="https://i.postimg.cc/Kj9CyxVY/mail-dulma.png" alt="Correo" style="display: block;">
@@ -355,7 +357,7 @@
                     <td width="545px" height="25px" style="font-family: Montserrat, sans-serif; font-size: 9pt; color: #919191; vertical-align: middle;">
                     <a href="mailto:${correo}" style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;">${correo}</a>
                     </td></tr></table>
-
+                    </div>
 
                     <table cellspacing="0" cellpadding="0" border="0">
                     <tr><td width=0px style="padding-right: 11px; vertical-align: middle;">
