--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
-        a {
-            font-family: 'Montserrat', sans-serif;
-            font-size: 9pt;
-            color: #919191;
-            vertical-align: middle;
-            text-decoration: none;
-        }
         body {
             font-family: 'Montserrat', sans-serif;
             background-color: #f4f4f4;
@@ -150,7 +143,7 @@
     <div class="container">
       <div class="form-section">
         <h1>Generador de firmas<br>
-          Correo Dulmatesa v.2.9</h1>
+          Correo Dulmatesa v.3.0</h1>
         Bienvenid@ al generador de firmas para correo de Dulmatesa. Para generar
         tu firma, selecciona tu nombre y pulsa el botón verde "Copiar firma al
         portapapeles".<br>
@@ -354,7 +347,7 @@
                         <img src="https://i.postimg.cc/Kj9CyxVY/mail-dulma.png" alt="Correo" style="display: block;">
                     </td>
                     <td width="545px" height="25px" style="font-family: Montserrat, sans-serif; font-size: 9pt; color: #919191; vertical-align: middle;">
-                    <a href="mailto:${correo}" style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;">${correo}</a>
+                    <a href="mailto:${correo}" style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;"><font color="green">${correo}</font></a>
                     </td></tr></table>
 
 
