--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -143,7 +143,7 @@
     <div class="container">
       <div class="form-section">
         <h1>Generador de firmas<br>
-          Correo Dulmatesa v.3.2</h1>
+          Correo Dulmatesa v.3.3</h1>
         Bienvenid@ al generador de firmas para correo de Dulmatesa. Para generar
         tu firma, selecciona tu nombre y pulsa el botón verde "Copiar firma al
         portapapeles".<br>
@@ -338,7 +338,7 @@
                         <img src="https://i.postimg.cc/4NSjL4VL/telf-dulma.png" alt="Teléfono" style="display: block;">
                     </td>
                     <td width="545px" height="25px" style="font-family: Montserrat, sans-serif; font-size: 9pt; color: #919191; vertical-align: middle;">
-                        <a href="tel:${telefono}" style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;"><font color="#919191">${telefono}</font></a>
+                        <a href="tel:${telefono}" style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;"><font color="919191">${telefono}</font></a>
                     </td></tr></table>
                     
 
@@ -347,7 +347,7 @@
                         <img src="https://i.postimg.cc/Kj9CyxVY/mail-dulma.png" alt="Correo" style="display: block;">
                     </td>
                     <td width="545px" height="25px" style="font-family: Montserrat, sans-serif; font-size: 9pt; color: #919191; vertical-align: middle;">
-                    <a href="mailto:${correo}" style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;"><font color="#919191">${correo}</font></a>
+                    <a href="mailto:${correo}" style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;"><font color="919191">${correo}</font></a>
                     </td></tr></table>
 
 
@@ -356,7 +356,7 @@
                         <img align="absmiddle" src="https://i.postimg.cc/bY7ms6cJ/ubi-dulma.png" alt="Dirección" style="display:block;">
                     </td>
                     <td width="545px" height="25px" style="font-family: Montserrat, sans-serif; font-size: 9pt; color: #919191; vertical-align: middle;">
-                        <span style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;"><font color="#919191">${address}</font></span>
+                        <span style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;"><font color="919191">${address}</font></span>
                     </td></tr></table>
                     
 
@@ -390,7 +390,7 @@
                         </table>
                         <table style="width: 570px;" border="0">
                                 <tr>
-                                    <td style="width: 570px;"><p style="margin: 10px 0; font-family: 'Montserrat', sans-serif; font-size: 8pt; color: #919191;">AVISO LEGAL: En virtud de la Ley Orgánica 3/2018, de 5 de diciembre, de Protección de Datos Personales y garantía de los derechos digitales y del reglamento europeo RGPD 679/2016 le informamos que sus datos están siendo objeto de tratamiento por parte de DULMATESA, S.L. Le informamos que los Datos de Carácter Personal que recoge son objeto de tratamiento, aplicándose los protocolos que la RGPD y la AGENCIA ESPAÑOLA DE PROTECCIÓN DE DATOS obliga. Para ejercitar sus derechos puede dirigirse a DULMATESA, S.L. en el domicilio social de calle Jaén, 9, Edificio Galia, Planta 3, Oficina 14, en el 29004 de Málaga o en el email: <a href="mailto:lopd@dulmatesa.es" style="color: #0C96D4; font-size: 8pt; font-weight: normal;"><font color="#0C96D4">lopd@dulmatesa.es</font></a> con el fin de ejercer sus derechos de acceso, rectificación, supresión (derecho al olvido), limitación de tratamiento, portabilidad de los datos, oposición, y a no ser objeto de decisiones automatizadas, indicando como Asunto: “Derechos Ley Protección de Datos”, y adjuntando fotocopia de su DNI. La información contenida en este correo electrónico, y en su caso en los documentos adjuntos, es información privilegiada para uso exclusivo de la persona y/o personas a las que va dirigido. No está permitido el acceso a este mensaje a cualquier otra persona distinta a los indicados. Si Usted no es uno de los destinatarios, cualquier duplicación, reproducción, distribución, así como cualquier uso de la información contenida en él o cualquiera otra acción u omisión tomada en relación con el mismo, puede estar prohibido y ser ilegal. En dicho caso, por favor notifíquelo al remitente y proceda a la eliminación de este correo electrónico, así como de sus adjuntos si los hubiere.</p></td>
+                                    <td style="width: 570px;"><p style="margin: 10px 0; font-family: 'Montserrat', sans-serif; font-size: 8pt; color: #919191;">AVISO LEGAL: En virtud de la Ley Orgánica 3/2018, de 5 de diciembre, de Protección de Datos Personales y garantía de los derechos digitales y del reglamento europeo RGPD 679/2016 le informamos que sus datos están siendo objeto de tratamiento por parte de DULMATESA, S.L. Le informamos que los Datos de Carácter Personal que recoge son objeto de tratamiento, aplicándose los protocolos que la RGPD y la AGENCIA ESPAÑOLA DE PROTECCIÓN DE DATOS obliga. Para ejercitar sus derechos puede dirigirse a DULMATESA, S.L. en el domicilio social de calle Jaén, 9, Edificio Galia, Planta 3, Oficina 14, en el 29004 de Málaga o en el email: <a href="mailto:lopd@dulmatesa.es" style="color: #0C96D4; font-size: 8pt; font-weight: normal;"><font color="0C96D4">lopd@dulmatesa.es</font></a> con el fin de ejercer sus derechos de acceso, rectificación, supresión (derecho al olvido), limitación de tratamiento, portabilidad de los datos, oposición, y a no ser objeto de decisiones automatizadas, indicando como Asunto: “Derechos Ley Protección de Datos”, y adjuntando fotocopia de su DNI. La información contenida en este correo electrónico, y en su caso en los documentos adjuntos, es información privilegiada para uso exclusivo de la persona y/o personas a las que va dirigido. No está permitido el acceso a este mensaje a cualquier otra persona distinta a los indicados. Si Usted no es uno de los destinatarios, cualquier duplicación, reproducción, distribución, así como cualquier uso de la información contenida en él o cualquiera otra acción u omisión tomada en relación con el mismo, puede estar prohibido y ser ilegal. En dicho caso, por favor notifíquelo al remitente y proceda a la eliminación de este correo electrónico, así como de sus adjuntos si los hubiere.</p></td>
                                 </tr>
                         </table>                       
                     </div>
