--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div class="container">
       <div class="form-section">
         <h1>Generador de firmas<br>
-          Correo Dulmatesa v.3.3</h1>
+          Correo Dulmatesa v.3.4</h1>
         Bienvenid@ al generador de firmas para correo de Dulmatesa. Para generar
         tu firma, selecciona tu nombre y pulsa el botón verde "Copiar firma al
         portapapeles".<br>
@@ -338,7 +338,7 @@
                         <img src="https://i.postimg.cc/4NSjL4VL/telf-dulma.png" alt="Teléfono" style="display: block;">
                     </td>
                     <td width="545px" height="25px" style="font-family: Montserrat, sans-serif; font-size: 9pt; color: #919191; vertical-align: middle;">
-                        <a href="tel:${telefono}" style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;"><font color="919191">${telefono}</font></a>
+                        <a href="tel:${telefono}" style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;"><font color="grey">${telefono}</font></a>
                     </td></tr></table>
                     
 
@@ -347,7 +347,7 @@
                         <img src="https://i.postimg.cc/Kj9CyxVY/mail-dulma.png" alt="Correo" style="display: block;">
                     </td>
                     <td width="545px" height="25px" style="font-family: Montserrat, sans-serif; font-size: 9pt; color: #919191; vertical-align: middle;">
-                    <a href="mailto:${correo}" style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;"><font color="919191">${correo}</font></a>
+                    <a href="mailto:${correo}" style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;"><font color="grey">${correo}</font></a>
                     </td></tr></table>
 
 
@@ -356,7 +356,7 @@
                         <img align="absmiddle" src="https://i.postimg.cc/bY7ms6cJ/ubi-dulma.png" alt="Dirección" style="display:block;">
                     </td>
                     <td width="545px" height="25px" style="font-family: Montserrat, sans-serif; font-size: 9pt; color: #919191; vertical-align: middle;">
-                        <span style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;"><font color="919191">${address}</font></span>
+                        <span style="font-family: 'Montserrat', sans-serif; color: #919191; font-size: 9pt; text-decoration: none;"><font color="grey">${address}</font></span>
                     </td></tr></table>
                     
 
