--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                         <img width=18px src="https://i.postimg.cc/NFJjFyLq/nueva-web.png" alt="Nueva web de Dulmatesa" style="display: block;">
                     </td>
                     <td width="544px" height="25px" style="font-family: Montserrat, sans-serif; font-size: 10pt; color: #0C96D4; vertical-align: middle;">
-                        <a href="https://www.dulmatesa.es" style="font-family: 'Montserrat', sans-serif; color: #0C96D4; font-size: 10pt; font-weight: bold; text-decoration: none;"><font color="#0C96D4"><p class="blue-text">Visita nuestra web: www.dulmatesa.es</p></font></a>
+                        <div class="blue-text"><a href="https://www.dulmatesa.es" style="font-family: 'Montserrat', sans-serif; color: #0C96D4; font-size: 10pt; font-weight: bold; text-decoration: none;"><font color="#0C96D4">Visita nuestra web: www.dulmatesa.es</font></a></div>
                     </td></tr></table>
                     
                     <table width="570px" cellspacing="0" cellpadding="0" border="0">
