--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div class="container">
       <div class="form-section">
         <h1>Generador de firmas<br>
-          Correo Dulmatesa v.3.7</h1>
+          Correo Dulmatesa v.3.8</h1>
         Bienvenid@ al generador de firmas para correo de Dulmatesa. Para generar
         tu firma, selecciona tu nombre y pulsa el botón verde "Copiar firma al
         portapapeles".<br>
@@ -315,12 +315,6 @@
 
           // Código HTML generado 
           const signatureHTML = `
-     <style>
-        .blue-text {
-            color: #0000ff;
-        }
-     </style>
-
                 <span style="font-family: 'Montserrat', sans-serif;">${saludo}</span>
                 <div style="font-family: 'Montserrat', sans-serif; color: #333; width: 595px;">
                 <table style="font-family: 'Montserrat', sans-serif; width: 570px;" border="0" cellspacing="0" cellpadding="0";>
@@ -371,7 +365,7 @@
                         <img width=18px src="https://i.postimg.cc/NFJjFyLq/nueva-web.png" alt="Nueva web de Dulmatesa" style="display: block;">
                     </td>
                     <td width="544px" height="25px" style="font-family: Montserrat, sans-serif; font-size: 10pt; color: #0C96D4; vertical-align: middle;">
-                        <div class="blue-text"><a href="https://www.dulmatesa.es" style="font-family: 'Montserrat', sans-serif; color: #0C96D4; font-size: 10pt; font-weight: bold; text-decoration: none;"><font color="#0C96D4">Visita nuestra web: www.dulmatesa.es</font></a></div>
+                        <div style="color: #0C96D4;"><a href="https://www.dulmatesa.es" style="font-family: 'Montserrat', sans-serif; color: #0C96D4; font-size: 10pt; font-weight: bold; text-decoration: none;"><font color="#0C96D4">Visita nuestra web: www.dulmatesa.es</font></a></div>
                     </td></tr></table>
                     
                     <table width="570px" cellspacing="0" cellpadding="0" border="0">
