--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div class="container">
       <div class="form-section">
         <h1>Generador de firmas<br>
-          Correo Dulmatesa v.3.9</h1>
+          Correo Dulmatesa v.3.7</h1>
         Bienvenid@ al generador de firmas para correo de Dulmatesa. Para generar
         tu firma, selecciona tu nombre y pulsa el botón verde "Copiar firma al
         portapapeles".<br>
@@ -205,7 +205,7 @@
               portapapeles. Ahora pégala en Outlook.</strong></div>
         </div>
       </div>
-      <div class="preview-section"> 
+      <div class="preview-section">
         <div class="preview-container">
           <div class="preview" id="signaturePreview"></div>
         </div>
@@ -315,11 +315,11 @@
 
           // Código HTML generado 
           const signatureHTML = `
-                <style>
-                .blue-text {
-                color: #0C96D4;
-                }
-                </style>
+     <style>
+        .blue-text {
+            color: #0000ff;
+        }
+     </style>
 
                 <span style="font-family: 'Montserrat', sans-serif;">${saludo}</span>
                 <div style="font-family: 'Montserrat', sans-serif; color: #333; width: 595px;">
