--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
         en tus correos, justo encima de tu firma. En caso de que no quieras
         incluir un saludo, simplemente no escribas nada.<br>
         <br>
-        En la parte derecha podrás ver una vista previa en tiempo real que te
-        muestra cómo quedará tu firma. <br>
+        Puedes ver una vista previa en tiempo real que te muestra
+        cómo quedará tu firma. <br>
         <br>
         <strong style="color:#133850">Por favor, selecciona tu nombre y pulsa el
           botón verde "Copiar firma al portapapeles".<br>
