--- a/index.html
+++ b/index.html
@@ -220,8 +220,9 @@
             <option value="" disabled="disabled" selected="selected">Selecciona
               tu nombre</option>
             <option value="Alejandro Silva">Alejandro Silva</option>
-            <option value="Ana Gutiérrez">Ana Gutiérrez</option>
             <option value="Alfredo González">Alfredo González</option>
+            <option value="Ana Gutiérrez">Ana Gutiérrez</option>
+            <option value="Diego Granero">Diego Granero</option>
             <option value="Esteban Tirado">Esteban Tirado</option>
             <option value="Pablo Alonso">Pablo Alonso</option>
             <option value="Raúl Castejón">Raúl Castejón</option>
@@ -329,7 +330,13 @@
                     oficina = 'Sede Puente Genil';
                     telefono = '652914552';
                     correo = 'ana.gutierrez@dulmatesa.es';
-                    break;               
+                    break;
+                case 'Diego Granero':
+                    positionValue = 'Diego Granero';
+                    oficina = 'Sede Navarrés';
+                    telefono = '962266191 / 630561991';
+                    correo = 'diego.granero@dulmatesa.es';
+                    break;  
                 case 'Esteban Tirado':               
                     positionValue = 'Jefe Logística';
                     oficina = 'Sede Navarrés';
