--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                     correo = 'ana.gutierrez@dulmatesa.es';
                     break;
                 case 'Diego Granero':
-                    positionValue = 'Diego Granero';
+                    positionValue = 'Cadena de suministro';
                     oficina = 'Sede Navarrés';
                     telefono = '962266191 / 630561991';
                     correo = 'diego.granero@dulmatesa.es';
