--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
             <option value="Ana Gutiérrez">Ana Gutiérrez</option>
             <option value="Diego Granero">Diego Granero</option>
             <option value="Esteban Tirado">Esteban Tirado</option>
+            <option value="Javier Serrano">Javier Serrano</option>
             <option value="Pablo Alonso">Pablo Alonso</option>
             <option value="Raúl Castejón">Raúl Castejón</option>
           </select>
@@ -342,6 +343,12 @@
                     oficina = 'Sede Navarrés';
                     correo = 'esteban.tirado@dulmatesa.es';
                     telefono = '658877528';
+                    break;
+                case 'Javier Serrano':               
+                    positionValue = 'Técnico de Calidad';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'javier.serrano@dulmatesa.es';
+                    telefono = '620751997';
                     break;
                 case 'Pablo Alonso':
                     positionValue = 'Director RR.HH.';
