--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                 <table style="font-family: 'Montserrat', sans-serif; width: 570px;" border="0" cellspacing="0" cellpadding="0";>
                 <br>
                     <tr><td><a href="https://www.dulmatesa.es" target="_blank">
-                    <img src="https://i.postimg.cc/PJM6gvyZ/Dulmatesa-logo.png" alt="Logo" style="width: 200px; margin-bottom: 20px;">
+                    <img width="200px" src="https://i.postimg.cc/PJM6gvyZ/Dulmatesa-logo.png" alt="Logo" style="width: 200px; margin-bottom: 20px;">
                     </a></td></tr>
 
                     <tr><td style="line-height: 13px;"><strong style="font-family: 'Montserrat', sans-serif; font-size: 11pt; color: #133850;">${name}</strong><br></td></tr>
