--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
       <div class="form-section">
         <h1>Generador de firmas<br>
           Correo Dulmatesa</h1>
-        Bienvenid@ al generador de firmas para correo de Dulmatesa. Para generar
-        tu firma, selecciona tu nombre y pulsa el botón verde "Copiar firma al
-        portapapeles".<br>
+        Bienvenid@ al generador de firmas para correo de Dulmatesa. Para
+        generar tu firma, selecciona tu nombre y pulsa el botón
+        verde "Copiar firma al portapapeles".<br>
         <br>
         Si lo deseas, puedes escribir un saludo que se mostrará automáticamente
         en tus correos, justo encima de tu firma. En caso de que no quieras
@@ -222,6 +222,7 @@
             <option value="Alejandro Silva">Alejandro Silva</option>
             <option value="Alfredo González">Alfredo González</option>
             <option value="Ana Gutiérrez">Ana Gutiérrez</option>
+            <option value="Begoña Quero">Begoña Quero</option>
             <option value="Diego Granero">Diego Granero</option>
             <option value="Esteban Tirado">Esteban Tirado</option>
             <option value="Javier Serrano">Javier Serrano</option>
@@ -331,6 +332,12 @@
                     oficina = 'Sede Puente Genil';
                     telefono = '652914552';
                     correo = 'ana.gutierrez@dulmatesa.es';
+                    break;
+                case 'Begoña Quero':
+                    positionValue = 'Técnico de PRL y RR.HH';
+                    oficina = 'Sede Puente Genil';
+                    telefono = '696487314';
+                    correo = 'bego.quero@dulmatesa.es';
                     break;
                 case 'Diego Granero':
                     positionValue = 'Cadena de suministro';
