--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     correo = 'ana.gutierrez@dulmatesa.es';
                     break;
                 case 'Begoña Quero':
-                    positionValue = 'Técnico de PRL y RR.HH';
+                    positionValue = 'Técnico de RR.HH. y PRL';
                     oficina = 'Sede Puente Genil';
                     telefono = '696487314';
                     correo = 'bego.quero@dulmatesa.es';
