--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
       <div class="form-section">
         <h1>Generador de firmas<br>
           Correo Dulmatesa</h1>
-        Bienvenid@ al generador de firmas para correo de Dulmatesa. Para
-        generar tu firma, selecciona tu nombre y pulsa el botón
-        verde "Copiar firma al portapapeles".<br>
+        Bienvenid@ al generador de firmas para correo de Dulmatesa. Para generar
+        tu firma, selecciona tu nombre y pulsa el botón verde "Copiar firma al
+        portapapeles".<br>
         <br>
         Si lo deseas, puedes escribir un saludo que se mostrará automáticamente
         en tus correos, justo encima de tu firma. En caso de que no quieras
@@ -228,6 +228,7 @@
             <option value="Javier Serrano">Javier Serrano</option>
             <option value="Pablo Alonso">Pablo Alonso</option>
             <option value="Raúl Castejón">Raúl Castejón</option>
+            <option value="Zaira Burgos">Zaira Burgos</option>
           </select>
           <label for="position" style="display: none;">Cargo:</label> <input id="position"
 
@@ -368,6 +369,12 @@
                     oficina = 'Oficinas Centrales / HQ';
                     correo = 'raul.castejon@dulmatesa.es';
                     telefono = '699089050';
+                    break;
+                 case 'Zaira Burgos':               
+                    positionValue = 'Administrativa Facturación';
+                    oficina = 'Oficinas Centrales / HQ';
+                    correo = 'zaira.burgos@dulmatesa.es';
+                    telefono = '952105709';
                     break;
                 default:
                 positionValue = 'Cargo';
