--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                     positionValue = 'Administrativa Facturación';
                     oficina = 'Oficinas Centrales / HQ';
                     correo = 'zaira.burgos@dulmatesa.es';
-                    telefono = '952105709';
+                    telefono = '952105709 - Ext. 2002';
                     break;
                 default:
                 positionValue = 'Cargo';
