--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
             <option value="Begoña Quero">Begoña Quero</option>
             <option value="Diego Granero">Diego Granero</option>
             <option value="Esteban Tirado">Esteban Tirado</option>
+            <option value="Francisco Ortega">Francisco Ortega</option>
             <option value="Javier Serrano">Javier Serrano</option>
             <option value="Pablo Alonso">Pablo Alonso</option>
             <option value="Raúl Castejón">Raúl Castejón</option>
@@ -351,6 +352,12 @@
                     oficina = 'Sede Navarrés';
                     correo = 'esteban.tirado@dulmatesa.es';
                     telefono = '658877528';
+                    break;
+                case 'Francisco Ortega':               
+                    positionValue = 'Contabilidad';
+                    oficina = 'Oficinas Centrales / HQ';
+                    correo = 'francisco.ortega@dulmatesa.es';
+                    telefono = '952105709';
                     break;
                 case 'Javier Serrano':               
                     positionValue = 'Técnico de Calidad';
