--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                 <table style="font-family: 'Montserrat', sans-serif; width: 570px;" border="0" cellspacing="0" cellpadding="0";>
                 <br>
                     <tr><td><a href="https://www.dulmatesa.es" target="_blank">
-                    <img width="200px" src="https://i.postimg.cc/PJM6gvyZ/Dulmatesa-logo.png" alt="Logo" style="width: 200px; margin-bottom: 20px;">
+                    <img width="200px" src="https://www.dulmatesa.es/img/dulmatesa-logo.png" alt="Logo" style="width: 200px; margin-bottom: 20px;">
                     </a></td></tr>
 
                     <tr><td style="line-height: 13px;"><strong style="font-family: 'Montserrat', sans-serif; font-size: 11pt; color: #133850;">${name}</strong><br></td></tr>
@@ -526,7 +526,7 @@
                     
                     <table cellspacing="0" cellpadding="0" border="0">
                     <tr><td cellspacing="0" cellpadding="0" border="0" width="0px" style="padding-right: 10px; vertical-align: middle;">
-                        <img src="https://i.postimg.cc/4NSjL4VL/telf-dulma.png" alt="Teléfono" style="display: block;">
+                        <img src="https://www.dulmatesa.es/img/telf-dulma.png" alt="Teléfono" style="display: block;">
                     </td>
                     <td width="545px" height="25px" style="font-family: Montserrat, sans-serif; font-size: 9pt; color: #828282; vertical-align: middle;">
                         <a href="tel:${telefono}" style="font-family: 'Montserrat', sans-serif; color: #828282; font-size: 9pt; text-decoration: none;"><font color="grey">${telefono}</font></a>
@@ -535,7 +535,7 @@
 
                     <table cellspacing="0" cellpadding="0" border="0">
                     <tr><td cellspacing="0" cellpadding="0" border="0" width="0px" style="padding-right: 9px; vertical-align: middle;">
-                        <img src="https://i.postimg.cc/Kj9CyxVY/mail-dulma.png" alt="Correo" style="display: block;">
+                        <img src="https://www.dulmatesa.es/img/mail-dulma.png" alt="Correo" style="display: block;">
                     </td>
                     <td width="545px" height="25px" style="font-family: Montserrat, sans-serif; font-size: 9pt; color: #828282; vertical-align: middle;">
                     <a href="mailto:${correo}" style="font-family: 'Montserrat', sans-serif; color: #828282; font-size: 9pt; text-decoration: none;"><font color="grey">${correo}</font></a>
@@ -544,7 +544,7 @@
 
                     <table cellspacing="0" cellpadding="0" border="0">
                     <tr><td width="0px" style="padding-right: 11px; vertical-align: middle;">
-                        <img align="absmiddle" src="https://i.postimg.cc/bY7ms6cJ/ubi-dulma.png" alt="Dirección" style="display:block;">
+                        <img align="absmiddle" src="https://www.dulmatesa.es/img/ubi-dulma.png" alt="Dirección" style="display:block;">
                     </td>
                     <td width="545px" height="25px" style="font-family: Montserrat, sans-serif; font-size: 9pt; color: #828282; vertical-align: middle;">
                         <span style="font-family: 'Montserrat', sans-serif; color: #828282; font-size: 9pt; text-decoration: none;"><font color="grey">${address}</font></span>
@@ -553,7 +553,7 @@
 
                     <table cellspacing="0" cellpadding="0" border="0">
                     <tr><td width="0px" style="padding-right: 8px; vertical-align: middle;">
-                        <img width=18px src="https://i.postimg.cc/NFJjFyLq/nueva-web.png" alt="Nueva web de Dulmatesa" style="display: block;">
+                        <img width=18px src="https://www.dulmatesa.es/img/nueva-web.png" alt="Nueva web de Dulmatesa" style="display: block;">
                     </td>
                     <td width="544px" height="25px" style="font-family: Montserrat, sans-serif; font-size: 10pt; color: #0C96D4; vertical-align: middle;">
                         <div class="blue-text"><a href="https://www.dulmatesa.es" style="font-family: 'Montserrat', sans-serif; color: #0C96D4; font-size: 10pt; font-weight: bold; text-decoration: none;"><font color="#0C96D4">Visita nuestra web: www.dulmatesa.es</font></a></div>
@@ -567,15 +567,15 @@
                     
                     <tr><td>
                     <div style="margin-top: 10px;">
-                        <img src="https://i.postimg.cc/GpQ8jP0X/lopez.png" alt="Productos López" style="width: 100px; margin-right: 10px;">
-                        <img src="https://i.postimg.cc/2jJqT8JN/productoslopez.png" alt="Productos López" style="width: 100px;">
+                        <img src="https://www.dulmatesa.es/img/lopez.png" alt="Productos López" style="width: 100px; margin-right: 10px;">
+                        <img src="https://www.dulmatesa.es/img/productoslopez.png" alt="Productos López" style="width: 100px;">
                     </div></td></tr>
                         </table> 
                     <div style="margin-top: 15px;">
                         <table style="width: 570px;" border="0">
 
                                 <tr>
-                                    <td style="width: 20px;"> <img width="20px" src="https://i.postimg.cc/3xQk5fYL/reciclado.png" alt="Reciclado" style="vertical-align: middle;"></td>
+                                    <td style="width: 20px;"> <img width="20px" src="https://www.dulmatesa.es/img/reciclado.png" alt="Reciclado" style="vertical-align: middle;"></td>
                                     <td style="width: 570px;"><p style="margin: 10px 0; font-family: 'Montserrat', sans-serif; font-size: 8pt; color: #878787;">Cuidemos el medio ambiente. Por favor no imprima este e-mail si no es necesario.</p></td>
                                 </tr> 
                         </table>
