--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
             <option value="Esteban Tirado">Esteban Tirado</option>
             <option value="Francisco Ortega">Francisco Ortega</option>
             <option value="Javier Serrano">Javier Serrano</option>
+            <option value="Miriam Hernández">Miriam Hernández</option>
             <option value="Pablo Alonso">Pablo Alonso</option>
             <option value="Raúl Castejón">Raúl Castejón</option>
             <option value="Zaira Burgos">Zaira Burgos</option>
@@ -364,6 +365,12 @@
                     oficina = 'Sede Puente Genil';
                     correo = 'javier.serrano@dulmatesa.es';
                     telefono = '620751997';
+                    break;
+                case 'Miriam Hernández':               
+                    positionValue = 'Tecnóloga';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'miriam.hernandez@dulmatesa.es';
+                    telefono = '638402663';
                     break;
                 case 'Pablo Alonso':
                     positionValue = 'Director RR.HH.';
