--- a/sorteo.html
+++ b/sorteo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sorteo iPhone 16</title>
     <style>
@@ -44,15 +44,12 @@
             transition: opacity 0.5s ease-in;
         }
     </style>
-</head>
-<body>
+  </head>
+  <body>
+    <div style="font-family: 'Montserrat', sans-serif; font-size: 20pt;" color:=""
 
-    <div style="font-family: 'Montserrat', sans-serif; font-size: 20pt;" color: #ffffff; id="preloader">Accediendo al sorteo. Un momento, por favor...</div>
-
-    <iframe id="iframe" 
-        src="https://dulmatesacom-my.sharepoint.com/personal/alejandro_silva_dulmatesa_es/_layouts/15/Doc.aspx?sourcedoc={1cdd0237-928d-4991-9cd8-8e4310568cce}&action=embedview&wdAr=1.2941176470588236&wdHideHeaders=True">
-    </iframe>
-
+      #ffffff;="" id="preloader">Accediendo al sorteo. Un momento, por favor...</div>
+    <iframe id="iframe" src="https://view.officeapps.live.com/op/embed.aspx?src=[https://dulmatesa.github.io/Sorteo-iPhone16.ppsx]"></iframe>
     <script>
         window.onload = function () {
             setTimeout(() => {
@@ -62,6 +59,5 @@
             }, 3000); // Espera 1s antes de hacer la transición
         };
     </script>
-
-</body>
+  </body>
 </html>
