--- a/sorteo.html
+++ b/sorteo.html
@@ -49,14 +49,14 @@
     <div style="font-family: 'Montserrat', sans-serif; font-size: 20pt;" color:=""
 
       #ffffff;="" id="preloader">Accediendo al sorteo. Un momento, por favor...</div>
-    <iframe id="iframe" src="https://view.officeapps.live.com/op/embed.aspx?src=[https://dulmatesa.github.io/Sorteo-iPhone16.ppsx]"></iframe>
+    <iframe id="iframe" src="https://view.officeapps.live.com/op/embed.aspx?src=https://dulmatesa.github.io/Sorteo-iPhone16.ppsx"></iframe>
     <script>
         window.onload = function () {
             setTimeout(() => {
                 document.getElementById("preloader").style.opacity = "0"; 
                 document.getElementById("iframe").style.opacity = "1"; 
                 setTimeout(() => document.getElementById("preloader").style.display = "none", 500);
-            }, 3000); // Espera 1s antes de hacer la transición
+            }, 3000); // Espera 3s antes de hacer la transición
         };
     </script>
   </body>
