--- a/sorteo.html
+++ b/sorteo.html
@@ -1,63 +1,130 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sorteo iPhone 16</title>
+    <title>Alerta de Phishing - Dulmatesa</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+        
+        body {
+            font-family: 'Montserrat', sans-serif;
+            text-align: center;
+            padding: 20px;
+            background-color: #f8f9fa;
         }
-
-        html, body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            width: 100vw;
-            background-color: #000000;
-        }
-
-        #preloader {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
+        .container {
+            max-width: 800px;
+            margin: auto;
             background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .header {
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 20px;
-            font-weight: bold;
-            color: #555;
-            transition: opacity 0.5s ease-out;
+            padding: 20px;
+            background: linear-gradient(135deg, #0d2a4a, #133850);
+            border-radius: 10px 10px 0 0;
         }
-
-        iframe {
-            opacity: 0;
-            width: 100vw;
-            height: 100vh;
-            border: none;
-            transition: opacity 0.5s ease-in;
+        .header img {
+            max-width: 200px;
+            height: auto;
+        }
+        h1 {
+            color: red;
+            font-weight: bold;
+            font-size: 30px;
+            text-transform: uppercase;
+        }
+        .alert-text {
+            text-align: left;
+            font-size: 16px;
+            margin-top: 10px;
+        }
+        .section {
+            text-align: left;
+            margin-top: 20px;
+        }
+        .section h2 {
+            font-size: 20px;
+            color: #133850;
+            font-weight: bold;
+        }
+        .section img {
+            display: block;
+            margin: 10px auto;
+            max-width: 100%;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+        .footer {
+            margin-top: 20px;
+            font-size: 14px;
+            color: #555;
+        }
+        .phishing-img {
+            float: right;
+            margin-left: 20px;
+            max-width: 30%;
+            height: auto;
+        }
+        /* Estilos para el footer destacado */
+        .footer-contact {
+            background: linear-gradient(135deg, #0d2a4a, #133850);
+            color: white;
+            padding: 20px;
+            font-size: 18px;
+            text-align: center;
+            border-radius: 10px;
+            margin-top: 30px;
+        }
+        .footer-contact a {
+            color: #fff;
+            font-weight: bold;
+            text-decoration: none;
+        }
+        .footer-contact a:hover {
+            text-decoration: underline;
         }
     </style>
-  </head>
-  <body>
-    <div style="font-family: 'Montserrat', sans-serif; font-size: 20pt;" color:=""
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <img src="https://dulmatesa.github.io/Dulmatesa-logo-blanco-365.png" alt="Dulmatesa Logo">
+        </div>
+        <h1>¡Cuidado, acabas de hacer clic en un correo falso!</h1>
+        <div class="alert-text">
+            <!-- Imagen de phishing justificada a la derecha -->
+            <img src="https://dulmatesa.github.io/Phishing.png" alt="Phishing Representativo" class="phishing-img">
+            <p>El correo electrónico que recibiste era un cebo que formaba parte de una campaña interna de formación contra la suplantación de identidad (anti-phishing) puesta en marcha por el departamento de IT de <strong>Dulmatesa</strong>.</p>
+            <p>En lugar de robar tus credenciales de acceso como lo haría un ciberdelincuente, te hemos redirigido a esta página educativa donde te mostraremos cómo detectar casos como este.</p>
+            <p>A continuación, te mostramos cómo podías haber detectado que este correo no era legítimo. <strong>Es muy importante que lo leas.</strong></p>              
+        </div>
 
-      #ffffff;="" id="preloader">Accediendo al sorteo. Un momento, por favor...</div>
-    <iframe id="iframe" src="https://view.officeapps.live.com/op/embed.aspx?src=https://dulmatesa.github.io/Sorteo-iPhone16.ppsx"></iframe>
-    <script>
-        window.onload = function () {
-            setTimeout(() => {
-                document.getElementById("preloader").style.opacity = "0"; 
-                document.getElementById("iframe").style.opacity = "1"; 
-                setTimeout(() => document.getElementById("preloader").style.display = "none", 500);
-            }, 3000); // Espera 3s antes de hacer la transición
-        };
-    </script>
-  </body>
+        <div class="section">
+            <h2>1. Comprueba la dirección del remitente</h2>
+            <p>Siempre que abras un correo en la organización, comprueba el remitente (señalado en rojo en la imagen). Es muy importante saber desde qué dirección lo envían.</p>
+            <img src="https://dulmatesa.github.io/email-phishing1.jpg" alt="Ejemplo de dirección de remitente falsa">
+            <p>En este caso, vemos que el correo ha llegado desde la dirección <strong>sorteosdulmatesa@dulmatesa.es</strong>, la cual parece ser legítima. Sin los sistemas de seguridad adecuados, los ciberdelincuentes pueden falsear las direcciones de envío, pero los sistemas de seguridad de Dulmatesa están preparados para detener este tipo de ataques. Aunque nuestros sistemas están preparados, en el futuro, los ciberdelincuentes podrían descubrir nuevos métodos para falsear las direcciones, por lo tanto, los usuarios debemos estar preparados.</p>
+            <p>En este ejemplo de formación educativa, los ciberdelincuentes habrían conseguido falsear la dirección de envío, así que, siempre, debemos fijarnos si el correo es o no externo, lo cual se explica en el siguiente apartado.</p>
+        </div>
+        
+        <div class="section">
+            <h2>2. Revisa siempre si el correo es externo a la organización</h2>
+            <p>En el punto anterior se indica que la dirección de correo parece ser legítima al pertenecer a dulmatesa.es, pero los ciberdelincuentes podrían haberla falseado. Entonces, ¿cómo sabemos en este caso que realmente el correo no pertenece a Dulmatesa?. Para saberlo, miraremos siempre si aparece el cartel de la parte superior que nos indica si el correo pertenece o no a la organización. Es el siguiente (marcado en rojo):</p>
+            <img src="https://dulmatesa.github.io/email-phishing2.jpg" alt="Aviso de correo externo">
+            <p>En este caso concreto, el sistema nos está avisando de que el correo se ha enviado desde fuera de la organización, por lo tanto, no puede ser de dulmatesa.es, lo han enviado desde un correo de <strong>fuera de la organización</strong> y han <strong>falseado la dirección</strong>.</p>
+            <p>Es muy importante que todos estemos siempre alerta al abrir correos en la organización. Por favor, notifica cualquier correo sospechoso que recibas a través del botón de Outlook "Denunciar/Informar“ haciendo clic derecho con el ratón sobre el correo en cuestión.</p>
+        </div>
+
+        <!-- Footer destacado -->
+        <div class="footer-contact">
+            <p><strong>¡Muchas gracias por tu colaboración!</strong><br>Si tienes dudas, contacta con el <a href="mailto:departamento.it@dulmatesa.es">departamento de IT de Dulmatesa</a>.</p>
+        </div>
+    </div>
+</body>
 </html>
